<resources>
    <string name="app_name">PizaCalc</string>
    <string name="action_settings">Settings</string>
    <string name="num_of_pizas">Number of Balls</string>
    <string name="flour">Flour</string>
    <string name="water">Water</string>
    <string name="dryInstant">Instant Yeast</string>
    <string name="olive_oil">Olive Oil</string>
    <string name="salt">Salt</string>
    <string name="sugar">Sugar</string>
    <string name="a_ball_weight">A ball weight</string>

    <!-- Preference Titles -->

    <!-- Messages Preferences -->

    <!-- Sync Preferences -->
    <string name="freshYeast">Fresh Yeast</string>
    <string name="dryActive">Active D. Yeast</string>
    <string name="gram">Gram</string>
    <string name="title_activity_about">About</string>
    <string name="weight_units">Weight Units</string>
    <string name="settings_instant_dry_yeast">Instant dry yeast</string>
    <string name="settings_active_dry_yeast">Active dry yeast</string>
    <string name="settings_yeast">Yeast</string>
    <string name="ounce">Ounce</string>
    <string name="Liquid_measurring_unit">Liquid measuring unit</string>
    <string name="millilitter">Millilitter</string>
    <string name="recipe_update">Recipe update</string>
    <string name="gram_simbol">g</string>
    <string name="ounces_simbol">Oz</string>
    <string name="mililliter">mil</string>
    <string name="water_range_error">Water percentage must be between 55% to 70%</string>
    <string name="recipe_update_dialog_title">Updating Recipe</string>
    <string name="recipe_update_dialog_message">The recipe succsessfully updated.</string>
</resources>
