<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pizza_slice_background"
    tools:context=".SettingsActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/settingsBackFloatingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        app:backgroundTint="#FAAA00"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@mipmap/back" />

    <RadioGroup
        android:id="@+id/yeastRG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07999998">

        <RadioButton
            android:id="@+id/dryInstenYeasttRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/settings_instant_dry_yeast"
            android:textColor="#9C27B0"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/dryActiveYeastRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_active_dry_yeast"
            android:textColor="#9C27B0"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/freshYeastRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/freshYeast"
            android:textColor="#9C27B0"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/settings_yeast"
        android:textColor="#9C27B0"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/yeastRG"
        app:layout_constraintStart_toStartOf="@+id/yeastRG" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="@+id/yeastRG"
        app:layout_constraintTop_toBottomOf="@+id/yeastRG">

        <RadioButton
            android:id="@+id/gramRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/gram"
            android:textColor="#9C27B0"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/ounceRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ounce"
            android:textColor="#9C27B0"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/weight_units"
        android:textColor="#9C27B0"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup2"
        app:layout_constraintStart_toStartOf="@+id/radioGroup2" />

    <RadioGroup
        android:id="@+id/radioGroup3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="@+id/radioGroup2"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2">

        <RadioButton
            android:id="@+id/milRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/millilitter"
            android:textColor="#9C27B0"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/gTB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight_units"
            android:textColor="#9C27B0"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/Liquid_measurring_unit"
        android:textColor="#9C27B0"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup3"
        app:layout_constraintStart_toStartOf="@+id/radioGroup3" />

    <RadioGroup
        android:id="@+id/roundingGRBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="@+id/radioGroup3"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup3">

        <RadioButton
            android:id="@+id/roundRBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="עיגול לשלמים"
            android:textColor="#9C27B0"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/notRoundRBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="ללא עיגול"
            android:textColor="#9C27B0"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="עיגול משקלים"
        android:textColor="#9C27B0"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/roundingGRBtn"
        app:layout_constraintStart_toStartOf="@+id/roundingGRBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>