<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculateRecepie">

    <EditText
        android:id="@+id/oliveOilED"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:editable="false"
        android:ems="10"
        android:enabled="false"
        android:inputType="numberSigned"
        android:textColor="@color/design_default_color_primary"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sugarED" />

    <EditText
        android:id="@+id/sugarED"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:editable="false"
        android:ems="10"
        android:enabled="false"
        android:inputType="numberSigned"
        android:textColor="@color/design_default_color_primary"
        app:layout_constraintEnd_toEndOf="@+id/oliveOilED"
        app:layout_constraintStart_toStartOf="@+id/oliveOilED"
        app:layout_constraintTop_toBottomOf="@+id/saltED" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/flour"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/flourEd"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/flourEd" />

    <EditText
        android:id="@+id/flourEd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:clickable="false"
        android:editable="false"
        android:ems="10"
        android:enabled="false"
        android:inputType="numberDecimal"
        android:textColor="@color/design_default_color_primary"
        app:layout_constraintEnd_toEndOf="@+id/watterEd"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/watterEd"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/calc_recipt_yeastTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dryInstant"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/yeastED"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/yeastED" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salt"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/saltED"
        app:layout_constraintStart_toStartOf="@+id/sugarTV"
        app:layout_constraintTop_toTopOf="@+id/saltED"
        app:layout_constraintVertical_bias="0.384" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/watter"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/watterEd"
        app:layout_constraintStart_toStartOf="@+id/calc_recipt_yeastTV"
        app:layout_constraintTop_toTopOf="@+id/watterEd" />

    <EditText
        android:id="@+id/watterEd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:enabled="false"
        android:inputType="numberDecimal"
        android:textColor="@color/design_default_color_primary"
        app:layout_constraintEnd_toEndOf="@+id/yeastED"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/yeastED"
        app:layout_constraintTop_toBottomOf="@+id/flourEd" />

    <EditText
        android:id="@+id/yeastED"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:editable="false"
        android:ems="10"
        android:enabled="false"
        android:inputType="numberSigned"
        android:textColor="@color/design_default_color_primary"
        app:layout_constraintEnd_toEndOf="@+id/saltED"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/saltED"
        app:layout_constraintTop_toBottomOf="@+id/watterEd" />

    <EditText
        android:id="@+id/saltED"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:editable="false"
        android:ems="10"
        android:enabled="false"
        android:inputType="numberSigned"
        android:textColor="@color/design_default_color_primary"
        app:layout_constraintEnd_toEndOf="@+id/sugarED"
        app:layout_constraintStart_toStartOf="@+id/sugarED"
        app:layout_constraintTop_toBottomOf="@+id/yeastED" />

    <TextView
        android:id="@+id/sugarTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sugar"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/sugarED"
        app:layout_constraintStart_toStartOf="@+id/oliveOilTV"
        app:layout_constraintTop_toTopOf="@+id/sugarED" />

    <TextView
        android:id="@+id/oliveOilTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/olive_oil"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/oliveOilED"
        app:layout_constraintEnd_toStartOf="@+id/oliveOilED"
        app:layout_constraintHorizontal_bias="0.36"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/oliveOilED" />

</androidx.constraintlayout.widget.ConstraintLayout>